# QuotaCompass

./: .gitignore  CHANGELOG.md  IMPLEMENTATION_NOTES.md  LICENSE  PLAN.md  README.md  config.example.yaml  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  publish.yml
docs/: AGENTS.md  COMPLETION_AUDIT.md  CUSTOMIZATION.md  PROVIDERS.md  PUBLISHING.md  SECURITY.md  TROUBLESHOOTING.md
quotacompass/: __init__.py  __main__.py  cli.py  setup_wizard.py
quotacompass/adapters/: anthropic_api.py  base.py  claude_oauth.py  codex_oauth.py  copilot.py  cursor.py  gemini.py  manual.py  nous.py  opencode.py  openrouter.py  registry.py  xai.py
quotacompass/core/: advisor.py  cadence.py  config.py  demo.py  demo_history.py  discovery.py  doctor.py  manual_store.py  models.py  poller.py  reauth.py  runtime.py  scheduler.py  service.py  statefile.py  store.py
quotacompass/server/: app.py  schemas.py
quotacompass/server/static/: index.html
quotacompass/server/static/assets/: index-DIWq3J6L.js  index-Pqc9bBcj.css
scripts/: inspect_cursor_schema.py  inspect_cursor_usage.py  inspect_cursor_value_shapes.py  inspect_hermes_portal.py  inspect_json_schema.py  install-service.ps1  install-service.sh
scripts/reauth/: claude.ps1  claude.sh  codex.ps1  codex.sh  copilot.ps1  copilot.sh  gemini.ps1  gemini.sh  nous.ps1  nous.sh  opencode.ps1  opencode.sh
skills/: README.md  build_skills.py
skills/frontmatter/: hermes.md  openclaw.md
skills/hermes/quotacompass/: SKILL.md
skills/hermes/quotacompass/scripts/: query.py
skills/openclaw/quotacompass/: SKILL.md
skills/shared/: BODY.md
tests/: test_additional_adapters.py  test_api_advisor_history.py  test_cadence.py  test_config.py  test_cursor_adapter.py  test_dashboard_token_storage.py  test_discovery_wsl.py  test_doctor.py  test_doctor_live.py  test_linked_account.py  test_manual_entry_flow.py  test_manual_fallback.py  test_manual_openrouter.py  test_manual_validation.py  test_models_advisor.py  test_network_policy.py  test_nous_adapter.py  test_oauth_adapters.py  test_opencode_adapter.py  test_pidfile_lock.py  test_poll_serialization.py  test_poller.py  test_privacy_assets.py  test_reauth.py  test_reauth_hints.py  test_release_publishing.py  test_retry_polling.py  test_runtime_coordination.py  test_runtime_pidfile.py  test_scheduler.py  test_service_server.py  test_setup_wizard.py  test_skill_query.py  test_state_store.py  test_task_advisor.py
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  vitest.config.ts
web/src/: ApiTokenPanel.tsx  App.tsx  AuthPanel.tsx  HistoryPanel.tsx  ManualEntry.tsx  ResetTimeline.tsx  api.ts  history.css  main.tsx  manual.css  styles.css  timeline.css  types.ts
web/src/test/: App.accessibility.test.tsx  setup.ts
